--- a/col4.html
+++ b/col4.html
@@ -17,7 +17,7 @@
 
 <body>
     <section id="header" class="container">
-        <a href="all.html" id="logo" class="clearfix">
+        <a href="index.html" id="logo" class="clearfix">
             <div class="logopos">
                 <img src="logo.png">
             </div>
@@ -30,7 +30,7 @@
     </section>
     <div id="wrapper" class="container clearfix">
         <div id="main-nav">
-            <a href="all.html" class="menu-link">All</a>
+            <a href="index.html" class="menu-link">All</a>
             <a href="col1.html" class="menu-link">Col 1</a>
             <a href="col2.html" class="menu-link">Col 2</a>
             <a href="col3.html" class="menu-link">Col 3</a>
