--- a/index.html
+++ b/index.html
@@ -591,9 +591,9 @@
         <div id="footer" class="clearfix">
             <ul class="menu">
                 <h4 class="title">LINKS</h4>
-                <li class="menu-item"><a href="https://instagram.com" title="">Instagram</a></li>
-                <li class="menu-item"><a href="https://www.facebook.com" title="">Facebook</a></li>
-                <li class="menu-item"><a href="https://twitter.com" title="">Twitter</a></li>
+                <li class="menu-item"><a href="https://www.instagram.com/shopspicyofficial/" title="">Instagram</a></li>
+                <li class="menu-item"><a href="https://www.facebook.com/Shop-Spicy-345761652863944" title="">Facebook</a></li>
+                <li class="menu-item"><a href="https://twitter.com/shopspicynow" title="">Twitter</a></li>
             </ul>
         </div>
     </div>
